# equity_lake

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLI_COMMANDS_REVIEW.md  DOCS_STRUCTURE.md  Dockerfile  MINOR_ISSUES_FIXED.md  Makefile  README.md  claude.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/add-equity-data-source/: SKILL.md
.agents/skills/catalog-generator/: SKILL.full.md  SKILL.md
.agents/skills/change-equity-schema/: SKILL.md
.agents/skills/run-equity-pipeline/: SKILL.md
.agents/skills/verify-equity-pipeline/: SKILL.md
.github/workflows/: catalog-check.yml  catalog-deploy.yml  data-validation.yml  pages.yml  quality.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
archive/docs-history/: README.md
archive/docs-history/backtesting/: backtesting-framework-summary.md
archive/docs-history/decisions/: implementation-summary-v0.2.md  ticker-config-refactoring.md
archive/docs-history/implementations/: implementation-summary-v0.2.md  parallel-cn-fetcher.md
archive/docs-history/planning/: implementation-plan.md
archive/docs-history/reports/: parallel-fetching-and-logging-test-results.md
archive/docs-history/research/: incremental-fetching-research.md  sentiment-ml-impact.md
archive/docs-history/superseded-copies/: PIPELINE_USAGE.md  QUICKSTART.md
config/: 20260410-config-guide.md  example.env  rss_feeds.yaml  settings.yaml  signals.yaml  social_sources.yaml  tickers.yaml  watchlist.yaml
data/: .gitkeep  catalog.jsonl
docs/: 20260406-api-keys.md  20260406-beta-dashboard-and-actions.md  20260406-roadmap-coverage.md  20260615-audit-findings-and-remaining-tasks.md  README.md  index.md  technical_roadmap.md
docs/analytics/: test-results.md
docs/architecture/: ml-analytics-platform.md  parallel-ingestion.md
docs/catalog/: astro.config.mjs  package-lock.json  package.json
docs/developer/: README.md
docs/developer-guide/: project-structure.md
docs/developer/architecture/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  data-flow.md  ml-analytics-platform.md  parallel-ingestion.md  pipeline-contracts.md
docs/developer/history/: DOCS_STRUCTURE.md  HANDOFF_2026-02-28_src_migration.md  README.md  (+4 more)
docs/getting-started/: quickstart.md
docs/guides/: parallel-fetching-guide.md  user-guide.md
docs/implementations/: efinance-migration.md  implementation-summary-v0.2.md  parallel-cn-fetcher.md  ticker-config-refactoring.md
docs/javascripts/: jupyter-theme-bridge.js
docs/notebooks/: 01-setup-and-config.ipynb  02-data-ingestion.ipynb  03-storage-and-queries.ipynb  04-hamilton-features.ipynb  05-feature-engineering-deep-dive.ipynb  06-ml-prediction.ipynb  07-signal-scanning.ipynb  09-sentiment-analysis.ipynb  10-validation-and-quality.ipynb
docs/planning/: development-log.md  implementation-plan.md
docs/plans/: 2025-03-03-signal-scanner-design.md  20260614-unstructured-data-ingestion-design.md  20260615-medallion-architecture-migration.md  20260623-project-streamlining.md  20260711-operational-contracts-implementation-handoff.md  20260719-project-cleanup.md
docs/reports/: 20260605-quant-ml-next-steps-handoff.md  README.md  equity-data-sources-analysis-2026.md
docs/stylesheets/: jupyter-fix.css
docs/user-guide/: 20260406-cli-reference.md  20260406-dashboard-hosting.md  backtesting.md  ingestion.md  operations.md  pipeline.md  signals.md
examples/: BACKTEST_FRAMEWORK_SUMMARY.md  BACKTEST_USAGE_GUIDE.md  backtest_demo.py  parallel_logging_demo.py  quick_test.py  run_backtest_test.sh
notebooks/: 01-setup-and-config.ipynb  02-data-ingestion.ipynb  03-storage-and-queries.ipynb  04-hamilton-features.ipynb  05-feature-engineering-deep-dive.ipynb  06-ml-prediction.ipynb  07-signal-scanning.ipynb  08-backtesting.ipynb  09-sentiment-analysis.ipynb  10-validation-and-quality.ipynb  README.md
overrides/: main.html
scripts/: __init__.py  config.py  gap_detector.py  generate_test_data.py  ingest_daily.py  logging_utils.py  migrate_to_delta.py  parallel_ingest.py  query_example.py  sync_from_s3.py  sync_pages_schedule.py  validate_configs.py
src/equity_lake/: __init__.py  backfill_data.py  feature_jobs.py  fetch_macro.py  ingestion_jobs.py  ml_jobs.py  pipeline.py  price_forecaster.py  run_pipeline.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_app_settings.py  test_backtest_generator.py  test_dashboard_exporter.py  test_hamilton_feature_pipeline.py  test_ingest.py  test_loader_registry.py  test_ml_generator.py  test_query.py  test_schedule_sync.py  test_sentiment_generator.py  test_signal_config.py  test_signal_generator_base.py  test_signal_history.py  test_signal_integration.py  test_signal_models.py  test_signal_scanner.py  test_terminal_formatter.py  test_update_engine.py
tests/integration/: test_duckdb_queries.py  test_news_ingestion.py  test_pipeline_orchestrator.py  test_signal_integration.py
tests/unit/: test_alerting.py  test_analyst_features.py  test_analyst_ratings.py  test_app_settings.py  test_backfill.py  test_backtesting_regressions.py  test_bootstrap.py  test_bronze_silver.py  test_calendar.py  test_catalog_builder.py  test_catalog_cli.py  test_catalog_datasets.py  test_catalog_writer.py  test_cli_unified.py  test_config_contract.py  test_delta_schema.py  test_div_by_zero_guards.py  test_enriched_sentiment.py  test_feature_engineering_sentiment.py  test_feature_jobs.py  test_fetchers.py  test_gap_detection.py  test_hamilton_feature_pipeline.py  test_import_boundaries.py  test_ingestion_orchestrator.py  test_ingestion_types.py  test_ingestion_writers.py  test_jpx_krx_fetchers.py  test_json_formatter.py  test_lake_reader.py  test_llm_processor.py  test_llm_processor_mock.py  test_loader_registry.py  test_macro_sources.py  test_markdown_formatter.py  test_medallion_migration.py  test_ml_generator.py  test_ml_jobs.py  test_ml_validation.py  test_monitoring_health.py  (+26 more)
(+285 files in other folders)
