[project]
name = "equity-edo-data-pipeline"
version = "0.1.0"
description = "Local-first equity EOD data pipeline with S3 bootstrap and daily updates"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Equity Data Pipeline Team", email = "data@example.com"},
]
keywords = ["equity", "eod", "data-pipeline", "duckdb", "parquet", "yfinance", "akshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data sources
    "yfinance>=0.2.50",      # US/HK/SG market data (free tier)
    "akshare>=1.15.0",       # China A-shares data (comprehensive)

    # Storage and query engine
    "duckdb>=1.0.0",         # SQL query engine with Parquet support
    "pandas>=2.2.0",         # Data manipulation and analysis
    "pyarrow>=18.0.0",       # Parquet I/O and Arrow data structures

    # Utilities
    "python-dotenv>=1.0.0",  # Environment variable management
    "requests>=2.31.0",      # HTTP requests for API calls
    "numpy>=1.24.0",         # Numerical computations
    "tqdm>=4.66.0",          # Progress bars for long operations
    "pydantic>=2.5.0",       # Data validation and settings management
    "structlog>=24.1.0",     # Structured logging for better observability
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.8.0",           # Linting and formatting
    "mypy>=1.11.0",          # Type checking
    "pre-commit>=3.6.0",     # Git hooks for code quality

    # Development tools
    "jupyter>=1.0.0",        # Notebook support for exploration
    "ipykernel>=6.29.0",     # Jupyter kernel
    "black>=24.0.0",         # Additional code formatting
    "isort>=5.13.0",         # Import sorting
]

s3 = [
    # S3 operations (optional)
    "boto3>=1.34.0",         # AWS SDK for S3 operations
    "s5cmd>=0.3.3",          # Fast S3 sync tool (if available)
]

visualization = [
    # Data visualization (optional)
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",     # Web dashboard
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.8.0",           # Linting and formatting
    "mypy>=1.11.0",          # Type checking
    "pre-commit>=3.6.0",     # Git hooks for code quality

    # Development tools
    "jupyter>=1.0.0",        # Notebook support for exploration
    "ipykernel>=6.29.0",     # Jupyter kernel
    "black>=24.0.0",         # Additional code formatting
    "isort>=5.13.0",         # Import sorting
]

[project.scripts]
equity-daily = "scripts.ingest_daily:main"
equity-sync = "scripts.sync_from_s3:main"
equity-query = "scripts.query_example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Star-arg unpacking after a keyword argument is strongly discouraged
    "B026",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["scripts", "tests", "data"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "akshare.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
