[project]
name = "equity-lake"
version = "0.1.0"
description = "equity-lake: Local-first equity EOD data pipeline with S3 bootstrap and daily updates"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Equity Data Pipeline Team", email = "data@example.com"},
]
keywords = ["equity", "eod", "data-pipeline", "duckdb", "parquet", "yfinance", "akshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core data sources
    "yfinance>=0.2.50", # US/HK/SG market data (free tier)
    "akshare>=1.15.0", # China A-shares data (comprehensive)
    "efinance>=0.5.5.2,<0.5.6", # China real-time market data (faster, more stable)
    "fredapi>=0.5.2", # FRED API for macro indicators
    # Storage and query engine
    "duckdb>=1.0.0", # SQL query engine with Parquet support
    "pandas>=2.2.0", # Data manipulation and analysis
    "pyarrow>=18.0.0", # Parquet I/O and Arrow data structures
    # Utilities
    "python-dotenv>=1.0.0", # Environment variable management
    "requests>=2.31.0", # HTTP requests for API calls
    "numpy>=1.24.0", # Numerical computations
    "tqdm>=4.66.0", # Progress bars for long operations
    "pydantic>=2.5.0", # Data validation and settings management
    "pydantic-settings>=2.6.1", # Environment overrides for YAML settings
    "croniter>=3.0.4", # Validate cron schedules
    "sf-hamilton>=1.69.0", # Declarative feature DAG for data engineering
    "praw>=7.8.1", # Reddit API for alternative data loaders
    "structlog>=24.1.0", # Structured logging for better observability
    "pyyaml>=6.0.2", # YAML config loading
    # News & sentiment
    "vaderSentiment>=3.3.2", # Sentiment analysis (VADER)
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.8.0",           # Linting and formatting
    "mypy>=1.11.0",          # Type checking
    "pre-commit>=3.6.0",     # Git hooks for code quality
    "pymarkdownlnt>=0.9.25", # Markdown linting

    # Development tools
    "jupyter>=1.0.0",        # Notebook support for exploration
    "ipykernel>=6.29.0",     # Jupyter kernel
    "black>=24.0.0",         # Additional code formatting
    "isort>=5.13.0",         # Import sorting
]

s3 = [
    # S3 operations (optional)
    "boto3>=1.34.0",         # AWS SDK for S3 operations
    "s5cmd>=0.3.3",          # Fast S3 sync tool (if available)
]

ml = [
    # ML and advanced analytics (optional)
    "xgboost>=3.1.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "pandas-ta>=0.4.71b0",
    "seaborn>=0.13.2",
    "networkx>=3.6.1",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
]

visualization = [
    # Lightweight visualization (optional)
    "matplotlib>=3.8.0",
    "plotly>=6.5.0",
]

backtesting = [
    # Backtesting and strategy analysis (optional)
    "vectorbt>=0.26.0",     # Fast vectorized backtesting engine
    "empyrical>=0.5.5",     # Performance metrics library
    "joblib>=1.4.0",        # Caching for data and results
    "jinja2>=3.1.0",        # HTML report generation
    "pandas-ta>=0.4.71b0",  # Technical analysis indicators
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.8.0",           # Linting and formatting
    "mypy>=1.11.0",          # Type checking
    "pre-commit>=3.6.0",     # Git hooks for code quality
    "pymarkdownlnt>=0.9.25", # Markdown linting

    # Development tools
    "jupyter>=1.0.0",        # Notebook support for exploration
    "ipykernel>=6.29.0",     # Jupyter kernel
    "black>=24.0.0",         # Additional code formatting
    "isort>=5.13.0",         # Import sorting
]

backtesting = [
    # Backtesting and strategy analysis
    "vectorbt>=0.26.0",     # Fast vectorized backtesting engine
    "joblib>=1.4.0",        # Caching for data and results
    "jinja2>=3.1.0",        # HTML report generation
    "pandas-ta>=0.4.71b0",  # Technical analysis indicators
]

[project.scripts]
equity-daily = "equity_lake.cli.daily:main"
equity-sync = "equity_lake.cli.sync:main"
equity-query = "equity_lake.cli.query:main"
equity-pipeline = "equity_lake.cli.pipeline:main"
equity-monitor = "equity_lake.cli.monitor:main"
equity-backfill = "equity_lake.cli.backfill:main"
equity-macro = "equity_lake.cli.macro:main"
equity-generate-test-data = "equity_lake.cli.generate_test_data:main"
equity-price-forecast = "equity_lake.cli.price_forecaster:main"
equity-backtest = "equity_lake.cli.backtest:main"
equity-news = "equity_lake.cli.news:main"
equity-sentiment = "equity_lake.cli.sentiment:main"
equity-signal = "equity_lake.cli.signal:main"
equity-dashboard = "equity_lake.cli.dashboard:main"
equity-loader = "equity_lake.cli.loader:main"
equity-update = "equity_lake.cli.update:main"
equity-config = "equity_lake.cli.config:main"

[project.entry-points."equity_lake.loaders"]
yfinance = "equity_lake.loaders.yfinance_loader:YFinanceLoader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equity_lake"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 150
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Star-arg unpacking after a keyword argument is strongly discouraged
    "B026",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["equity_lake", "tests", "data"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "akshare.*",
    "duckdb.*",
    "efinance.*",
    "pandas.*",
    "numpy.*",
    "structlog.*",
    "pydantic.*",
    "pydantic_settings.*",
    "yaml.*",
    "requests.*",
    "tqdm.*",
    "tabulate.*",
    "joblib.*",
    "hamilton.*",
    "croniter.*",
    "praw.*",
    "vaderSentiment.*",
    "fredapi.*",
    "dotenv.*",
    "xgboost.*",
    "sklearn.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/equity_lake"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
