[project]
name = "equity-lake"
version = "0.1.0"
description = "equity-lake: Local-first equity EOD data pipeline with S3 bootstrap and daily updates"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Equity Data Pipeline Team", email = "data@example.com"},
]
keywords = ["equity", "eod", "data-pipeline", "duckdb", "parquet", "yfinance", "akshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "yfinance>=0.2.50",
    "akshare>=1.15.0",
    "efinance>=0.5.5.2,<0.5.6",
    "fredapi>=0.5.2",
    "finance-datareader>=0.9.96,<1.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=18.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.6.1",
    "sf-hamilton>=1.69.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "deltalake>=0.25.0",
    "croniter>=6.2.2",
    "joblib>=1.5.3",
    "pointblank>=0.8",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    "aiolimiter>=1.2.1",
    "exchange-calendars>=4.6",
    "feedparser>=6.0.11",
    "openai>=1.50.0",
    "xgboost>=3.1.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "readability-lxml>=0.8.1",
    "edgartools>=5.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.6.0",
    "pymarkdownlnt>=0.9.25",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "vaderSentiment>=3.3.2",
]
ml = [
    "shap>=0.49.1",
    "seaborn>=0.13.2",
    "networkx>=3.6.1",
    "statsmodels>=0.14.6",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=6.5.0",
]
backtesting = [
    "polars-backtest>=0.1.6",
    "jinja2>=3.1.0",
]
dashboard = [
    "streamlit>=1.28.0",
]
validation = [
    "pointblank>=0.8",
]
sentiment = [
    "vaderSentiment>=3.3.2",
    "praw>=7.8.1",
]
s3 = [
    "boto3>=1.34.0",
    "s5cmd>=0.3.3",
]
schedule = [
    "croniter>=3.0.4",
]
docs = [
    "mike>=2.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
]

[project.scripts]
equity = "equity_lake.cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equity_lake"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "notebooks",
]

# Same as Black.
line-length = 150
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Star-arg unpacking after a keyword argument is strongly discouraged
    "B026",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["equity_lake", "tests", "data"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "exchange_calendars",
    "yfinance.*",
    "akshare.*",
    "duckdb.*",
    "efinance.*",
    "pandas.*",
    "numpy.*",
    "structlog.*",
    "pydantic.*",
    "pydantic_settings.*",
    "yaml.*",
    "requests.*",
    "tqdm.*",
    "tabulate.*",
    "joblib.*",
    "hamilton.*",
    "croniter.*",
    "praw.*",
    "vaderSentiment.*",
    "fredapi.*",
    "dotenv.*",
    "xgboost.*",
    "sklearn.*",
    "pytest.*",
    "FinDataReader.*",
    "FinanceDataReader.*",
    "vectorbt.*",
     "polars_backtest.*",
     "typer.*",
     "pointblank.*",
     "streamlit.*",
     "pyarrow.*",
    "feedparser.*",
    "openai.*",
    "readability.*",
    "shap.*",
    "statsmodels.*",
    "networkx.*",
    "exchange_calendars.*",
    "edgar",
    "edgar.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--strict-markers", "--strict-config", "-ra", "-q", "--durations=10", "--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: >1s tests",
    "unit: fast isolated tests",
    "integration: external services / cross-module",
    "e2e: full workflow",
    "serial: cannot run in parallel",
    "network: needs internet or API key",
    "smoke: critical path",
]

[tool.coverage.run]
source = ["src/equity_lake"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
